--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   gap: 1rem;
   grid-auto-rows: max-content;
 }
-#list{
+.list{
   width: 250px;
 }
 
@@ -46,7 +46,7 @@ li a{
   display: flex;
   flex-direction: column;
 }
-#list-cart{
+.list-cart{
   display: flex;
   gap: 1rem;
   align-items: center;
