--- a/src/App.css
+++ b/src/App.css
@@ -25,10 +25,23 @@
   cursor: pointer;
 }
 .description-product{
-  /* border: 1px solid #646cff;
-   */
-   line-height: 0.2;
+   display: flex;
+   justify-content: space-between;
+   line-height: 0;
+   text-transform: capitalize;
+
 }
+h3{
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #fff;
+}
+
+form{
+  display: flex;
+  flex-direction: row;
+}
+
 .x{
   margin-top: 1rem;
   display: flex;
@@ -94,4 +107,11 @@ img{
   object-fit: contain;
   
 }
-
+.out-stock{
+  background-color: rgba(255, 0, 0, 0.433);
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  margin: 0.5rem 0;
+  display: inline-block;
+  font-weight: bold;
+}
