--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,36 @@
   width: 100%;
   box-sizing: border-box;
 }
+.filter-by{
+  margin: 1rem 0;
+}
+.filter-type{
+    border-radius: 8px;
+    margin-right: 0.5rem;
+    border: 1px solid transparent;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    font-weight: bold;
+    background-color: #0000004e;
+    cursor: pointer;
+    transition: border-color 0.25s;
+    color: #fff;
+    text-transform: capitalize;
+}
+
+.filter-type:hover, .filter-type:focus, .filter-type:active {
+  border-color: #646cff;  
+  background-color: #646cff46;  
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  color: #fff;
+}
+.filter-type:focus,
+.filter-type:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+
+}
+
+
 
 .products{
   width: 100%;
@@ -42,7 +72,7 @@ form{
   flex-direction: row;
 }
 
-.x{
+.layaout{
   margin-top: 1rem;
   display: flex;
   flex-direction: row;
