--- a/src/App.css
+++ b/src/App.css
@@ -98,10 +98,14 @@ form{
   width: 100%;
   gap: 1rem;
 }
-
+/* NavBar */
+.header-navbar{
+  margin-top: 1rem;
+  margin-bottom: 4rem;
+}
 .navbar{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin-bottom: 2rem;
 
@@ -160,6 +164,17 @@ aside h3{
 .list-cart {
   border-bottom : .1rem solid #646cff9f;
 }
+.total-cart{
+  background-color: #646cffb0;
+  border-radius: 50%;
+  padding: 0.3rem;
+  font-size: 1rem;
+  position: relative ;
+  bottom: 0.5rem;
+  display: inline-block;
+  text-align: center;
+}
+
 
 /* Helpers */
 .alert{
