🐛 FIX: remove ligth theme for mobile sizes

--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ button:focus-visible {
 
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -69,4 +69,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
